[package]
name = "setvision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-colors = "0.3.0"
clap = { version = "4.0.32", features = ["derive"] }
combinations = "0.1.0"
imageproc = { version = "0.23.0", features = ["display-window"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
